--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -12,7 +12,6 @@
   .mainPhoto {
     display: block;
     margin: 0 auto;
-    border-radius: 55%;
     height: auto;
     width: 35%;
   }
